# coding_infos

./: README.md
lecturecppws23/: README.md  UE2.cpp  input.txt
lecturecppws23/homework/: homework_1.cpp  homework_5_functions.cpp  homework_6.cpp  homework_7_SinVector.cpp  results.txt
lecturecppws23/lecture1/: FStreamExample.cpp  helloWorld.cpp  helloWorld2.cpp
lecturecppws23/lecture1examples/: main-sin-error.cpp  main-sin.cpp  main-type2.cpp  main-type3.cpp  main-typer.cpp  main_ofstream.cpp
lecturecppws23/lecture2/: lecture2_funWithPointers.cpp  lecture2_namespaceExample.cpp  lecture2_pointers.cpp
lecturecppws23/lecture4/: FunctionExample2.cpp
lecturecppws23/lecture5/: Entry.h
lecturecppws23/lecture5codes/: class1.cpp  vector2D.cpp
lecturecppws23/lecture6/: classes_02.cpp
lecturecppws23/lecture6codes/: classInitializer.cpp  classMove.cpp  templates.cpp
lecturecppws23/lecture9codes/cmake-template/: CMakeLists.txt
lecturecppws23/lecture9codes/cmake-template/Module/: CMakeLists.txt
lecturecppws23/lecture9codes/cmake-template/Module/include/: Module.h
lecturecppws23/lecture9codes/cmake-template/Module2/src/: Module2.cpp
lecturecppws23/lecture9codes/cmake-template/Module2/test/: Module2.cc
lecturecppws23/lecture9codes/cmake-template/cmake/: Makefile  bin_create.cmake  gtest.in  lib_create.cmake
lecturecppws23/lecture9codes/cmake-template/googletest-download/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  cmake_install.cmake  googletest.vcxproj
lecturecppws23/lecture9codes/cmake-template/googletest-download/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
lecturecppws23/lecture9codes/cmake-template/googletest-download/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ParallelCustomBuild.read.1.tlog  ParallelCustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
lecturecppws23/lecture9codes/cmake-template/googletest-download/Win32/Debug/googletest/googletest.tlog/: custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
lecturecppws23/lecture9codes/cmake-template/googletest-download/googletest-prefix/src/googletest-stamp/: googletest-update-info.txt
lecturecppws23/lecture9codes/cmake-template/googletest-download/googletest-prefix/tmp/: googletest-mkdirs.cmake
lecturecppws23/lecture9codes/examples/cmake-example1/: CMakeLists.txt  b.cpp
lecturecppws23/lecture9codes/examples/cmake-example2-shared/: CMakeLists.txt
lecturecppws23/lecture9codes/examples/makefile-example/: Makefile  Makefile2  Makefile3  run
lecturecppws23/lecture9codes/project-creator/BuildStructureAnalyzer/include/: CMakeGraphvizOutputCreator.h  DependencyFileParser.h
lecturecppws23/lecture9codes/project-creator/BuildStructureAnalyzer/src/: CMakeProperties.cpp
lecturecppws23/lecture9codes/project-creator/BuildStructureAnalyzer/test/: DependencyFileParser.cc
lecturecppws23/lecture9codes/project-creator/FilePrinter/: CMakeLists.txt
lecturecppws23/lecture9codes/project-creator/cmake/: functions.cmake  gtest.cmake  macros.cmake  shared_lib_utils.cmake
lecturecppws23/sample_codes_stdlib/sample_codes_stdvector/: constructor_assignment.cpp  vector_examples.cpp
lecturecppws23_gerstmayr/homework/: homework_10_2DVectorTemplated.cpp  homework_2.cpp  homework_3.cpp  homework_4_ODEMemAllloc.cpp  homework_8_odeSolver_class.cpp  homework_9_2DVector.cpp
lecturecppws23_gerstmayr/lecture1examples/: main-type3-1.cpp  main-vector.cpp  main.cpp  main_fstream.cpp
lecturecppws23_gerstmayr/lecture4/: FunctionExample1.cpp  MemoryManagement.cpp
lecturecppws23_gerstmayr/lecture5/: classes_1.cpp  example_struct.cpp  example_structClass.cpp
lecturecppws23_gerstmayr/lecture5codes/: classCopyConst.cpp
lecturecppws23_gerstmayr/lecture6/: classes_01.cpp
lecturecppws23_gerstmayr/lecture6codes/: classInheritance.cpp  classTest.cpp
lecturecppws23_gerstmayr/lecture9codes/cmake-template/: CMakeCache.txt
lecturecppws23_gerstmayr/lecture9codes/cmake-template/Module/src/: Module.cpp
lecturecppws23_gerstmayr/lecture9codes/cmake-template/Module2/: CMakeLists.txt
lecturecppws23_gerstmayr/lecture9codes/cmake-template/cmake/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  macros.cmake
lecturecppws23_gerstmayr/lecture9codes/cmake-template/googletest-download/: CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  googletest-download.sln  googletest.vcxproj.filters
lecturecppws23_gerstmayr/lecture9codes/cmake-template/googletest-download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake
lecturecppws23_gerstmayr/lecture9codes/examples/cmake-example1_Linux/: CMakeLists.txt
lecturecppws23_gerstmayr/lecture9codes/examples/cmake-example2-static/: CMakeLists.txt
lecturecppws23_gerstmayr/lecture9codes/examples/slide2/: c.cpp
lecturecppws23_gerstmayr/lecture9codes/project-creator/: CMakeLists.txt  README.md
lecturecppws23_gerstmayr/lecture9codes/project-creator/BuildStructureAnalyzer/: CMakeLists.txt
lecturecppws23_gerstmayr/lecture9codes/project-creator/BuildStructureAnalyzer/include/: CMakeInputFilesAnalyzer.h  CMakeProperties.h  DependencyGraph.h
lecturecppws23_gerstmayr/lecture9codes/project-creator/BuildStructureAnalyzer/src/: CMakeGraphvizOutputCreator.cpp  CMakeInputFilesAnalyzer.cpp  DependencyFileParser.cpp  DependencyGraph.cpp
lecturecppws23_gerstmayr/lecture9codes/project-creator/BuildStructureAnalyzer/test/: CMakeGraphvizOutputCreator.cc  CMakeInputFilesAnalyzer.cc
lecturecppws23_gerstmayr/lecture9codes/project-creator/BuildStructureAnalyzer/test/test_files/Basic/: CMakeLists.txt
lecturecppws23_gerstmayr/lecture9codes/project-creator/FilePrinter/include/: FilePrinter.h
lecturecppws23_gerstmayr/lecture9codes/project-creator/FilePrinter/src/: FilePrinter.cpp
lecturecppws23_gerstmayr/lecture9codes/project-creator/cmake/: CMakeLists.txt  bin_create.cmake  gtest.in  lib_create.cmake
lecturecppws23_gerstmayr/sample_codes_stdlib/sample_codes_stdvector/: CMakeLists.txt  stl_usage_vector.cpp
(+3 files in other folders)
